// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      hey
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      hey
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu llqPcV"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-iFEEnu tiMuK"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-fmzYco jjjVfe"
      tabindex="0"
    >
      <span
        class="sc-eYamsp lgXetw"
      >
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gliaOv epmnrc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fHRCPF cvkTmv sc-iILUYU hBIpDd"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gzHMyu kUTliR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gliaOv epmnrc"
    >
      : 
    </i>
    <span
      class="sc-grNHTL dlSwMX"
    >
      Hey
       
      <span
        class="sc-fHRCPF cvkTmv sc-ZGwPe dHHPwJ"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gzHMyu kUTliR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
